2010-06-18  Rob Buis  <rwlbuis@gmail.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=19575
        layout test svg/batik/text/textDecoration.svg hangs

        Reenable this test since crash is gone (tested on OS X 10.5.8).

        * platform/mac/svg/batik/text/textDecoration-expected.checksum: Added.
        * platform/mac/svg/batik/text/textDecoration-expected.png: Added.
        * platform/mac/svg/batik/text/textDecoration-expected.txt: Added.
        * svg/batik/text/textDecoration.svg: Renamed from LayoutTests/svg/batik/text/textDecoration.svg-disabled.

2010-06-18  Alexey Proskuryakov  <ap@apple.com>

        Test by Chris Brichford.

        https://bugs.webkit.org/show_bug.cgi?id=19759
        ChildNodeList for an attribute node is not properly invalidated after appending a child

        This issue has been fixed in another bug, just landing an additional test.

        * fast/dom/Attr/child-nodes-length-cache-expected.txt: Added.
        * fast/dom/Attr/child-nodes-length-cache.html: Added.

2010-06-18  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Adam Barth.

        Tests that we do not crash while rendering a fixed table layout.
        https://bugs.webkit.org/show_bug.cgi?id=40812

        * fast/table/zero-colspan-crash-expected.txt: Added.
        * fast/table/zero-colspan-crash.html: Added.

2010-06-18  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoffrey Garen.

        Incorrect handling of multiple BOMs scattered through a file.
        https://bugs.webkit.org/show_bug.cgi?id=40865

        Put a few more BOMs into this testcase so that it hits the other cases
        that were missed before.

        * fast/js/resources/bom-in-file-retains-correct-offset.js:
        (g.f):
        (g):

2010-06-18  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, expectations update.

        Update a few more chromium-win baselines after http://trac.webkit.org/changeset/61393.
