@@ -7,6 +7,7 @@ PASS context2 is non-null.
 PASS program is non-null.
 PASS program2 is non-null.
 PASS context.getError() is context.NO_ERROR
+PASS context2.getError() is context2.NO_ERROR
 PASS context.getActiveUniform(program, 0).name is 'u_modelViewProjMatrix'
 PASS context.getActiveUniform(program, 0).type is context.FLOAT_MAT4
 PASS context.getActiveUniform(program, 0).size is 1
@@ -24,6 +25,14 @@ PASS info[ii].size is expected[ii].size
 PASS info[ii].name is expected[ii].name
 PASS info[ii].type is expected[ii].type
 PASS info[ii].size is expected[ii].size
+PASS info2[ii] is non-null.
+PASS info2[ii] is non-null.
+PASS info2[ii].name is expected2[ii].name
+PASS info2[ii].type is expected2[ii].type
+PASS info2[ii].size is expected2[ii].size
+PASS info2[ii].name is expected2[ii].name
+PASS info2[ii].type is expected2[ii].type
+PASS info2[ii].size is expected2[ii].size
 PASS context.getActiveAttrib(program, 2) is null
 PASS context.getError() is context.INVALID_VALUE
 PASS context.getActiveAttrib(program, -1) is null
